--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistemas Retro</title>
+    <title>Retrospectiva</title>
 </head>
 <body>
     <h1>
-        Sistemas Retro
+        Retrospectiva
     </h1>
+    <h2>
+        Una página sobre computadores y sistemas de hace 20 años.
+    </h2>
     
 </body>
 </html>
